# budget-project

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
personal_budget/: manage.py
personal_budget/monthly_budget/: admin.py  forms.py  urls.py  views.py
personal_budget/monthly_budget/fixtures/: category.json  transaction.json
personal_budget/monthly_budget/migrations/: 0001_initial.py  0002_auto_20191104_1839.py  0003_category.py  0004_transaction.py  0005_transaction_description.py  0006_auto_20191109_0748.py  0007_balance.py  0008_auto_20191119_1430.py  0009_auto_20191119_1431.py  0010_auto_20191119_1439.py  0011_auto_20191122_0738.py  0012_auto_20191130_0743.py  0013_balance_balance.py  0014_auto_20191224_1240.py  0015_remove_balance_balance_sum.py  0016_auto_20200101_0809.py  0017_auto_20200103_0826.py  0018_auto_20200104_1610.py  0019_auto_20200104_1640.py  0020_auto_20200104_1640.py  0021_auto_20200105_0752.py  0022_auto_20200105_0820.py  0023_auto_20200105_0841.py  0024_auto_20200105_0928.py  0025_auto_20200106_1611.py  0026_auto_20200106_1614.py  0027_auto_20200106_1616.py  0028_auto_20200106_1617.py  0029_auto_20200529_1445.py
personal_budget/monthly_budget/models/: __init__.py  _transaction_alternative.py  balance.py  category.py  period.py  transaction.py
personal_budget/monthly_budget/static/monthly_budget/: style.css
personal_budget/monthly_budget/templates/monthly_budget/: error.html  (+1 more)
personal_budget/monthly_budget/tests/: __init__.py  test_input.py  test_models.py
personal_budget/personal_budget/: settings.py  urls.py  wsgi.py
