[tool.poetry]
name = "budget-project"
version = "0.1.0"
description = ""
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
coverage = "^5.1"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
